--- a/index.html
+++ b/index.html
@@ -63,9 +63,66 @@
   <div class="container">
     <div class="row">
 
-      <main class="main"></main>
+      <main class="main col-lg-9 col-lg-push-3 col-md-8 col-md-push-4">
+        <h1>MAIN</h1>
+        <p><span>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum quam, adipisci molestias officia
+            voluptates minus! Nostrum quia debitis reprehenderit, aperiam harum quasi fugit. Unde consequuntur iure
+            ullam deserunt recusandae accusantium.</span><span>Repellendus voluptates aut labore impedit quaerat
+            excepturi doloremque ab delectus non eum, accusantium fugiat cupiditate consectetur dolorum, est cumque
+            optio rem quis voluptatem? Voluptas aperiam, nulla exercitationem quaerat provident quo!</span><span>Minima
+            error fuga, ipsa necessitatibus culpa reprehenderit deleniti sint veritatis non iusto illo similique
+            aperiam, dolor dolorem perspiciatis odio tenetur. Debitis nobis quisquam sint et numquam commodi minus
+            nostrum facilis.</span><span>A neque illo perferendis ab corporis vitae deleniti minus! Adipisci corporis
+            quasi minus blanditiis mollitia, tenetur totam officia officiis saepe ratione aliquid reprehenderit enim?
+            Consequatur vero quis provident deserunt sint.</span><span>Illo distinctio necessitatibus cum minus
+            pariatur. Odio rem minima nam ab alias. Ratione reiciendis dolores esse nobis ad eos tenetur, voluptatem
+            perferendis expedita animi reprehenderit ut nulla, hic molestiae. Quibusdam?</span><span>Cum voluptate
+            veritatis sed. Libero necessitatibus eos voluptatibus dolores distinctio! Quibusdam eum praesentium quasi
+            vel eligendi rerum, pariatur, quisquam dolore, cumque magni soluta recusandae hic quo quod dolor. Quidem,
+            sit.</span><span>Ducimus eaque vero autem aliquid a quas labore sit voluptas minus nihil laborum fugiat
+            provident recusandae blanditiis eos perspiciatis numquam, animi et eligendi ipsam inventore voluptatem!
+            Error neque nesciunt ullam.</span><span>Voluptatem officiis sed atque eius nesciunt dolorem aspernatur
+            dignissimos quae numquam delectus culpa recusandae error eligendi incidunt enim sit, deserunt repudiandae
+            iure ut laborum eaque aliquam illum. Soluta, autem accusamus!</span></p>
+      </main>
 
-      <aside class="left-sidebar"></aside>
+      <aside class="left-sidebar col-lg-3 col-lg-pull-9 col-md-4 col-md-pull-8">
+
+        <div class="vertical-slider panel panel-info">
+          <div class="panel-heading">PanelHeading</div>
+          <div class="panel-body">
+            PanelContent
+          </div>
+        </div>
+
+        <div class="site-search panel panel-info">
+          <div class="panel-heading">Поиск</div>
+          <div class="panel-body">
+            PanelContent
+          </div>
+        </div>
+
+        <div class="user-login panel panel-info">
+          <div class="panel-heading">Пользователь</div>
+          <div class="panel-body">
+            PanelContent
+          </div>
+        </div>
+
+        <div class="site-news panel panel-info">
+          <div class="panel-heading">Новости сайта</div>
+          <div class="panel-body">
+            PanelContent
+          </div>
+        </div>
+
+        <div class="top-films panel panel-info">
+          <div class="panel-heading">Рейтинг фильмов</div>
+          <div class="panel-body">
+            PanelContent
+          </div>
+        </div>
+      </aside>
 
     </div>
   </div>
