--- a/index.html
+++ b/index.html
@@ -89,23 +89,113 @@
       <aside class="left-sidebar col-lg-3 col-lg-pull-9 col-md-4 col-md-pull-8">
 
         <div class="vertical-slider panel panel-info">
-          <div class="panel-heading">PanelHeading</div>
-          <div class="panel-body">
-            PanelContent
+          <div id="vertical-slider" class="carousel slide" data-ride="carousel">
+            <ol class="carousel-indicators">
+              <li data-target="#vertical-slider" data-slide-to="0" class="active"></li>
+              <li data-target="#vertical-slider" data-slide-to="1"></li>
+              <li data-target="#vertical-slider" data-slide-to="2"></li>
+            </ol>
+
+            <!-- Wrapper for slides -->
+            <div class="carousel-inner" role="listbox">
+              <div class="item active">
+                <img class="vertical-slider__image" src="assets/img/films/1263242.jpg" alt="film cover">
+                <div class="carousel-caption">
+                  ...
+                </div>
+              </div>
+              <div class="item">
+                <img class="vertical-slider__image" src="assets/img/films/1289488.jpg" alt="film cover">
+                <div class="carousel-caption">
+                  ...
+                </div>
+              </div>
+              <div class="item">
+                <img class="vertical-slider__image" src="assets/img/films/1401663.jpg" alt="film cover">
+                <div class="carousel-caption">
+                  ...
+                </div>
+              </div>
+            </div>
+
+            <a class="left carousel-control" href="#vertical-slider" role="button" data-slide="prev">
+              <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+              <span class="sr-only">Previous</span>
+            </a>
+            <a class="right carousel-control" href="#vertical-slider" role="button" data-slide="next">
+              <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+              <span class="sr-only">Next</span>
+            </a>
           </div>
         </div>
 
         <div class="site-search panel panel-info">
           <div class="panel-heading">Поиск</div>
           <div class="panel-body">
-            PanelContent
+            <form action="search">
+
+              <div class="input-group input-group-lg">
+                <input class="form-control" type="search" placeholder="Поиск по сайту">
+                <span class="input-group-btn">
+                  <button class="btn btn-default">
+                    <span class="glyphicon glyphicon-search"></span>
+                  </button>
+                </span>
+              </div>
+
+            </form>
           </div>
         </div>
 
         <div class="user-login panel panel-info">
           <div class="panel-heading">Пользователь</div>
           <div class="panel-body">
-            PanelContent
+
+            <!-- Nav tabs -->
+            <ul class="user-login__tabs nav nav-tabs" role="tablist">
+              <li role="presentation" class="active">
+                <a href="#user-login-sidebar" aria-controls="user-login-sidebar" role="tab" data-toggle="tab">
+                  <span class="glyphicon glyphicon-log-in"></span>
+                </a>
+              </li>
+              <li role="presentation">
+                <a href="#user-registration-sidebar" aria-controls="user-registration-sidebar" role="tab"
+                  data-toggle="tab">
+                  <span class="glyphicon glyphicon-user"></span>
+                </a>
+              </li>
+            </ul>
+
+            <div class="user-login__content tab-content">
+              <div role="tabpanel" class="tab-pane fade in active" id="user-login-sidebar">
+
+                <form action="login">
+                  <div class="form-group">
+                    <input class="form-control input-lg" placeholder="Логин" type="text">
+                  </div>
+                  <div class="form-group">
+                    <input class="form-control input-lg" placeholder="Пароль" type="password">
+                  </div>
+                  <button class="btn btn-default btn-lg btn-block">Вход</button>
+                </form>
+              </div>
+
+              <div role="tabpanel" class="tab-pane fade" id="user-registration-sidebar">
+                <form action="registration">
+                  <div class="form-group">
+                    <input class="form-control input-lg" placeholder="Логин" type="text">
+                  </div>
+                  <div class="form-group">
+                    <input class="form-control input-lg" placeholder="Пароль" type="password">
+                  </div>
+                  <div class="form-group">
+                    <input class="form-control input-lg" placeholder="Email" type="email">
+                  </div>
+                  <button class="btn btn-default btn-lg btn-block">Регистрация</button>
+                </form>
+              </div>
+
+            </div>
           </div>
         </div>
 
