--- a/index.html
+++ b/index.html
@@ -88,6 +88,7 @@
 
       <aside class="left-sidebar col-lg-3 col-lg-pull-9 col-md-4 col-md-pull-8">
 
+        <!-- Carousel Sidebar-->
         <div class="vertical-slider panel panel-info">
           <div id="vertical-slider" class="carousel slide" data-ride="carousel">
             <ol class="carousel-indicators">
@@ -129,6 +130,7 @@
           </div>
         </div>
 
+        <!-- Search Sidebar-->
         <div class="site-search panel panel-info">
           <div class="panel-heading">Поиск</div>
           <div class="panel-body">
@@ -147,6 +149,7 @@
           </div>
         </div>
 
+        <!-- Login Sidebar-->
         <div class="user-login panel panel-info">
           <div class="panel-heading">Пользователь</div>
           <div class="panel-body">
@@ -199,19 +202,72 @@
           </div>
         </div>
 
+        <!-- News Sidebar-->
         <div class="site-news panel panel-info">
           <div class="panel-heading">Новости сайта</div>
           <div class="panel-body">
-            PanelContent
+
+            <div class="site-news-item">
+              <div class="site-news-item__thumbnail thumbnail">
+                <img class="site-news-item__image" src="assets/img/75x75.png" alt="image placeholder">
+              </div>
+              <div class="site-news-item__title">
+                <a class="site-news-item__link" href="#">Мы запустили новый сервис - КиноМонстр</a>
+              </div>
+              <div class="site-news-item__date">5 декабря 2016</div>
+            </div>
+
+            <div class="site-news-item">
+              <div class="site-news-item__thumbnail thumbnail">
+                <img class="site-news-item__image" src="assets/img/75x75.png" alt="image placeholder">
+              </div>
+              <div class="site-news-item__title">
+                <a class="site-news-item__link" href="#">На сайте добавлен новый функционал</a>
+              </div>
+              <div class="site-news-item__date">6 декабря 2016</div>
+            </div>
+
+            <div class="site-news-item">
+              <div class="site-news-item__thumbnail thumbnail">
+                <img class="site-news-item__image" src="assets/img/75x75.png" alt="image placeholder">
+              </div>
+              <div class="site-news-item__title">
+                <a class="site-news-item__link" href="#">Скорость скачивания фильмов увеличена</a>
+              </div>
+              <div class="site-news-item__date">7 декабря 2016</div>
+            </div>
+
+            <div class="site-news-item">
+              <div class="site-news-item__thumbnail thumbnail">
+                <img class="site-news-item__image" src="assets/img/75x75.png" alt="image placeholder">
+              </div>
+              <div class="site-news-item__title">
+                <a class="site-news-item__link" href="#">Оптимизирована производительность сервера</a>
+              </div>
+              <div class="site-news-item__date">8 декабря 2016</div>
+            </div>
+
+            <div class="site-news-item">
+              <div class="site-news-item__thumbnail thumbnail">
+                <img class="site-news-item__image" src="assets/img/75x75.png" alt="image placeholder">
+              </div>
+              <div class="site-news-item__title">
+                <a class="site-news-item__link" href="#">Количество пользователей перевалила за 10 000</a>
+              </div>
+              <div class="site-news-item__date">9 декабря 2016</div>
+            </div>
+
           </div>
         </div>
 
+        <!-- Top Films Sidebar-->
         <div class="top-films panel panel-info">
           <div class="panel-heading">Рейтинг фильмов</div>
           <div class="panel-body">
             PanelContent
           </div>
         </div>
+
       </aside>
 
     </div>
