--- a/index.html
+++ b/index.html
@@ -29,67 +29,262 @@
     </div>
 
     <div class="header-menu"></div>
+
+    <nav class="navbar navbar-inverse navbar-static-top">
+      <div class="container">
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-top"
+            aria-expanded="false">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+        </div>
+
+        <div class="collapse navbar-collapse" id="navbar-top">
+          <ul class="nav navbar-nav navbar-left">
+            <li class="active"><a href="#">Главная <span class="sr-only">(current)</span></a></li>
+            <li><a href="#">Фильмы</a></li>
+            <li><a href="#">Сериалы</a></li>
+            <li><a href="#">Контакты</a></li>
+          </ul>
+
+          <ul class="nav navbar-nav navbar-right">
+            <li><a href="#">Новинки</a></li>
+            <li><a href="#">Рейтинг</a></li>
+            <li><a href="#">Раздачи</a></li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+
   </header>
 
-  <nav class="navbar navbar-inverse navbar-static-top">
-    <div class="container">
-      <div class="navbar-header">
-        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-top"
-          aria-expanded="false">
-          <span class="sr-only">Toggle navigation</span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-        </button>
-      </div>
 
-      <div class="collapse navbar-collapse" id="navbar-top">
-        <ul class="nav navbar-nav navbar-left">
-          <li class="active"><a href="#">Главная <span class="sr-only">(current)</span></a></li>
-          <li><a href="#">Фильмы</a></li>
-          <li><a href="#">Сериалы</a></li>
-          <li><a href="#">Контакты</a></li>
-        </ul>
-
-        <ul class="nav navbar-nav navbar-right">
-          <li><a href="#">Новинки</a></li>
-          <li><a href="#">Рейтинг</a></li>
-          <li><a href="#">Раздачи</a></li>
-        </ul>
-      </div>
-    </div>
-  </nav>
 
   <div class="container">
     <div class="row">
 
       <main class="main col-lg-9 col-lg-push-3 col-md-8 col-md-push-4">
-        <h1>MAIN</h1>
-        <p><span>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum quam, adipisci molestias officia
-            voluptates minus! Nostrum quia debitis reprehenderit, aperiam harum quasi fugit. Unde consequuntur iure
-            ullam deserunt recusandae accusantium.</span><span>Repellendus voluptates aut labore impedit quaerat
-            excepturi doloremque ab delectus non eum, accusantium fugiat cupiditate consectetur dolorum, est cumque
-            optio rem quis voluptatem? Voluptas aperiam, nulla exercitationem quaerat provident quo!</span><span>Minima
-            error fuga, ipsa necessitatibus culpa reprehenderit deleniti sint veritatis non iusto illo similique
-            aperiam, dolor dolorem perspiciatis odio tenetur. Debitis nobis quisquam sint et numquam commodi minus
-            nostrum facilis.</span><span>A neque illo perferendis ab corporis vitae deleniti minus! Adipisci corporis
-            quasi minus blanditiis mollitia, tenetur totam officia officiis saepe ratione aliquid reprehenderit enim?
-            Consequatur vero quis provident deserunt sint.</span><span>Illo distinctio necessitatibus cum minus
-            pariatur. Odio rem minima nam ab alias. Ratione reiciendis dolores esse nobis ad eos tenetur, voluptatem
-            perferendis expedita animi reprehenderit ut nulla, hic molestiae. Quibusdam?</span><span>Cum voluptate
-            veritatis sed. Libero necessitatibus eos voluptatibus dolores distinctio! Quibusdam eum praesentium quasi
-            vel eligendi rerum, pariatur, quisquam dolore, cumque magni soluta recusandae hic quo quod dolor. Quidem,
-            sit.</span><span>Ducimus eaque vero autem aliquid a quas labore sit voluptas minus nihil laborum fugiat
-            provident recusandae blanditiis eos perspiciatis numquam, animi et eligendi ipsam inventore voluptatem!
-            Error neque nesciunt ullam.</span><span>Voluptatem officiis sed atque eius nesciunt dolorem aspernatur
-            dignissimos quae numquam delectus culpa recusandae error eligendi incidunt enim sit, deserunt repudiandae
-            iure ut laborum eaque aliquam illum. Soluta, autem accusamus!</span></p>
+
+        <!-- Search Main-->
+        <section class="site-search panel panel-info hidden-lg hidden-md">
+          <div class="panel-heading">Поиск</div>
+          <div class="panel-body">
+            <form action="search">
+
+              <div class="input-group input-group-lg">
+                <input class="form-control" type="search" placeholder="Поиск по сайту">
+                <span class="input-group-btn">
+                  <button class="btn btn-default">
+                    <span class="glyphicon glyphicon-search"></span>
+                  </button>
+                </span>
+              </div>
+
+            </form>
+          </div>
+        </section>
+
+        <!-- Login Main-->
+        <section class="user-login panel panel-info hidden-lg hidden-md">
+          <div class="panel-heading">Пользователь</div>
+          <div class="panel-body">
+
+            <!-- Nav tabs -->
+            <ul class="user-login__tabs nav nav-tabs" role="tablist">
+              <li role="presentation" class="active">
+                <a href="#user-login-main" aria-controls="user-login-main" role="tab" data-toggle="tab">
+                  <span class="glyphicon glyphicon-log-in"></span>
+                </a>
+              </li>
+              <li role="presentation">
+                <a href="#user-registration-main" aria-controls="user-registration-main" role="tab" data-toggle="tab">
+                  <span class="glyphicon glyphicon-user"></span>
+                </a>
+              </li>
+            </ul>
+
+            <div class="user-login__content tab-content">
+              <div role="tabpanel" class="tab-pane fade in active" id="user-login-main">
+
+                <form action="login">
+                  <div class="form-group">
+                    <input class="form-control input-lg" placeholder="Логин" type="text">
+                  </div>
+                  <div class="form-group">
+                    <input class="form-control input-lg" placeholder="Пароль" type="password">
+                  </div>
+                  <button class="btn btn-default btn-lg btn-block">Вход</button>
+                </form>
+              </div>
+
+              <div role="tabpanel" class="tab-pane fade" id="user-registration-main">
+                <form action="registration">
+                  <div class="form-group">
+                    <input class="form-control input-lg" placeholder="Логин" type="text">
+                  </div>
+                  <div class="form-group">
+                    <input class="form-control input-lg" placeholder="Пароль" type="password">
+                  </div>
+                  <div class="form-group">
+                    <input class="form-control input-lg" placeholder="Email" type="email">
+                  </div>
+                  <button class="btn btn-default btn-lg btn-block">Регистрация</button>
+                </form>
+              </div>
+
+            </div>
+          </div>
+        </section>
+
+        <section class="new-films">
+          <h1 class="new-films-title">Новые фильмы</h1>
+          <div class="new-films-row row">
+
+            <article class="new-films-item col-lg-3 col-sm-4 col-xs-6">
+              <div class="new-films-item__thumbnail thumbnail">
+                <a href="">
+                  <img class="new-films-item__image" src="assets/img/films/1266931.jpg" alt="image">
+                  <div class="new-films-item__caption caption">
+                    <h3 class="new-films-item__title">Стражи галактики</h3>
+                  </div>
+                </a>
+              </div>
+            </article>
+
+            <article class="new-films-item col-lg-3 col-sm-4 col-xs-6">
+              <div class="new-films-item__thumbnail thumbnail">
+                <a href="">
+                  <img class="new-films-item__image" src="assets/img/films/1289488.jpg" alt="image">
+                  <div class="new-films-item__caption caption">
+                    <h3 class="new-films-item__title">Занесло</h3>
+                  </div>
+                </a>
+              </div>
+            </article>
+
+            <article class="new-films-item col-lg-3 col-sm-4 col-xs-6">
+              <div class="new-films-item__thumbnail thumbnail">
+                <a href="">
+                  <img class="new-films-item__image" src="assets/img/films/1341151.jpg" alt="image">
+                  <div class="new-films-item__caption caption">
+                    <h3 class="new-films-item__title">Из машины</h3>
+                  </div>
+                </a>
+              </div>
+            </article>
+
+            <article class="new-films-item col-lg-3 col-sm-4 col-xs-6">
+              <div class="new-films-item__thumbnail thumbnail">
+                <a href="">
+                  <img class="new-films-item__image" src="assets/img/films/1381061.jpg" alt="image">
+                  <div class="new-films-item__caption caption">
+                    <h3 class="new-films-item__title">Выхода нет</h3>
+                  </div>
+                </a>
+              </div>
+            </article>
+
+            <article class="new-films-item col-lg-3 col-sm-4 col-xs-6">
+              <div class="new-films-item__thumbnail thumbnail">
+                <a href="">
+                  <img class="new-films-item__image" src="assets/img/films/1393263.jpg" alt="image">
+                  <div class="new-films-item__caption caption">
+                    <h3 class="new-films-item__title">Человек муравей</h3>
+                  </div>
+                </a>
+              </div>
+            </article>
+
+            <article class="new-films-item col-lg-3 col-sm-4 col-xs-6">
+              <div class="new-films-item__thumbnail thumbnail">
+                <a href="">
+                  <img class="new-films-item__image" src="assets/img/films/1263242.jpg" alt="image">
+                  <div class="new-films-item__caption caption">
+                    <h3 class="new-films-item__title">Люси</h3>
+                  </div>
+                </a>
+              </div>
+            </article>
+
+            <article class="new-films-item col-lg-3 col-sm-4 col-xs-6">
+              <div class="new-films-item__thumbnail thumbnail">
+                <a href="">
+                  <img class="new-films-item__image" src="assets/img/films/1401663.jpg" alt="image">
+                  <div class="new-films-item__caption caption">
+                    <h3 class="new-films-item__title">Марсианин</h3>
+                  </div>
+                </a>
+              </div>
+            </article>
+
+            <article class="new-films-item col-lg-3 col-sm-4 col-xs-6">
+              <div class="new-films-item__thumbnail thumbnail">
+                <a href="">
+                  <img class="new-films-item__image" src="assets/img/films/1415999.jpg" alt="image">
+                  <div class="new-films-item__caption caption">
+                    <h3 class="new-films-item__title">Дочь Бога</h3>
+                  </div>
+                </a>
+              </div>
+            </article>
+
+            <article class="new-films-item col-lg-3 col-sm-4 col-xs-6">
+              <div class="new-films-item__thumbnail thumbnail">
+                <a href="">
+                  <img class="new-films-item__image" src="assets/img/films/1423264.jpg" alt="image">
+                  <div class="new-films-item__caption caption">
+                    <h3 class="new-films-item__title">Месть от кутюр</h3>
+                  </div>
+                </a>
+              </div>
+            </article>
+
+            <article class="new-films-item col-lg-3 col-sm-4 col-xs-6">
+              <div class="new-films-item__thumbnail thumbnail">
+                <a href="">
+                  <img class="new-films-item__image" src="assets/img/films/1441076.jpg" alt="image">
+                  <div class="new-films-item__caption caption">
+                    <h3 class="new-films-item__title">5ять</h3>
+                  </div>
+                </a>
+              </div>
+            </article>
+
+            <article class="new-films-item col-lg-3 col-sm-4 col-xs-6">
+              <div class="new-films-item__thumbnail thumbnail">
+                <a href="">
+                  <img class="new-films-item__image" src="assets/img/films/1453229.jpg" alt="image">
+                  <div class="new-films-item__caption caption">
+                    <h3 class="new-films-item__title">Люди Икс</h3>
+                  </div>
+                </a>
+              </div>
+            </article>
+
+            <article class="new-films-item col-lg-3 col-sm-4 col-xs-6">
+              <div class="new-films-item__thumbnail thumbnail">
+                <a href="">
+                  <img class="new-films-item__image" src="assets/img/films/1455536.jpg" alt="image">
+                  <div class="new-films-item__caption caption">
+                    <h3 class="new-films-item__title">Иллюзия обмана 2</h3>
+                  </div>
+                </a>
+              </div>
+            </article>
+
+          </div>
+        </section>
+
+        <section></section>
       </main>
 
       <aside class="left-sidebar col-lg-3 col-lg-pull-9 col-md-4 col-md-pull-8">
 
         <!-- Carousel Sidebar-->
-        <div class="vertical-slider panel panel-info">
+        <div class="vertical-slider panel panel-info hidden-sm hidden-xs">
           <div id="vertical-slider" class="carousel slide" data-ride="carousel">
             <ol class="carousel-indicators">
               <li data-target="#vertical-slider" data-slide-to="0" class="active"></li>
@@ -131,7 +326,7 @@
         </div>
 
         <!-- Search Sidebar-->
-        <div class="site-search panel panel-info">
+        <div class="site-search panel panel-info hidden-sm hidden-xs">
           <div class="panel-heading">Поиск</div>
           <div class="panel-body">
             <form action="search">
@@ -150,7 +345,7 @@
         </div>
 
         <!-- Login Sidebar-->
-        <div class="user-login panel panel-info">
+        <div class="user-login panel panel-info hidden-sm hidden-xs">
           <div class="panel-heading">Пользователь</div>
           <div class="panel-body">
 
@@ -263,8 +458,31 @@
         <!-- Top Films Sidebar-->
         <div class="top-films panel panel-info">
           <div class="panel-heading">Рейтинг фильмов</div>
-          <div class="panel-body">
-            PanelContent
+          <div class="top-films__body panel-body">
+            <div class="top-films__list list-group">
+              <a href="#" class="top-films__item list-group-item">Марсианин
+                <span class="top-films__badge badge">8.9</span></a>
+              <a href="#" class="top-films__item list-group-item">Иллюзия обмана 2
+                <span class="top-films__badge badge">8.8</span></a>
+              <a href="#" class="top-films__item list-group-item">Из машины
+                <span class="top-films__badge badge">8.5</span></a>
+              <a href="#" class="top-films__item list-group-item">Люси
+                <span class="top-films__badge badge">8.2</span></a>
+              <a href="#" class="top-films__item list-group-item">Выхода нет
+                <span class="top-films__badge badge">8.0</span></a>
+              <a href="#" class="top-films__item list-group-item">Стражи галактики
+                <span class="top-films__badge badge">7.9</span></a>
+              <a href="#" class="top-films__item list-group-item">Человек муравей
+                <span class="top-films__badge badge">7.7</span></a>
+              <a href="#" class="top-films__item list-group-item">Месть от кутюр
+                <span class="top-films__badge badge">7.5</span></a>
+              <a href="#" class="top-films__item list-group-item">Люди Икс
+                <span class="top-films__badge badge">7.4</span></a>
+              <a href="#" class="top-films__item list-group-item">Занесло
+                <span class="top-films__badge badge">7.3</span></a>
+              <a href="#" class="top-films__item list-group-item">Дочь Бога
+                <span class="top-films__badge badge">7.2</span></a>
+            </div>
           </div>
         </div>
 
