--- a/index.html
+++ b/index.html
@@ -139,13 +139,14 @@
           </div>
         </section>
 
+        <!-- New Films Section -->
         <section class="new-films">
           <h1 class="new-films-title">Новые фильмы</h1>
           <div class="new-films-row row">
 
             <article class="new-films-item col-lg-3 col-sm-4 col-xs-6">
               <div class="new-films-item__thumbnail thumbnail">
-                <a href="">
+                <a href="#">
                   <img class="new-films-item__image" src="assets/img/films/1266931.jpg" alt="image">
                   <div class="new-films-item__caption caption">
                     <h3 class="new-films-item__title">Стражи галактики</h3>
@@ -156,7 +157,7 @@
 
             <article class="new-films-item col-lg-3 col-sm-4 col-xs-6">
               <div class="new-films-item__thumbnail thumbnail">
-                <a href="">
+                <a href="#">
                   <img class="new-films-item__image" src="assets/img/films/1289488.jpg" alt="image">
                   <div class="new-films-item__caption caption">
                     <h3 class="new-films-item__title">Занесло</h3>
@@ -167,7 +168,7 @@
 
             <article class="new-films-item col-lg-3 col-sm-4 col-xs-6">
               <div class="new-films-item__thumbnail thumbnail">
-                <a href="">
+                <a href="#">
                   <img class="new-films-item__image" src="assets/img/films/1341151.jpg" alt="image">
                   <div class="new-films-item__caption caption">
                     <h3 class="new-films-item__title">Из машины</h3>
@@ -178,7 +179,7 @@
 
             <article class="new-films-item col-lg-3 col-sm-4 col-xs-6">
               <div class="new-films-item__thumbnail thumbnail">
-                <a href="">
+                <a href="#">
                   <img class="new-films-item__image" src="assets/img/films/1381061.jpg" alt="image">
                   <div class="new-films-item__caption caption">
                     <h3 class="new-films-item__title">Выхода нет</h3>
@@ -189,7 +190,7 @@
 
             <article class="new-films-item col-lg-3 col-sm-4 col-xs-6">
               <div class="new-films-item__thumbnail thumbnail">
-                <a href="">
+                <a href="#">
                   <img class="new-films-item__image" src="assets/img/films/1393263.jpg" alt="image">
                   <div class="new-films-item__caption caption">
                     <h3 class="new-films-item__title">Человек муравей</h3>
@@ -200,7 +201,7 @@
 
             <article class="new-films-item col-lg-3 col-sm-4 col-xs-6">
               <div class="new-films-item__thumbnail thumbnail">
-                <a href="">
+                <a href="#">
                   <img class="new-films-item__image" src="assets/img/films/1263242.jpg" alt="image">
                   <div class="new-films-item__caption caption">
                     <h3 class="new-films-item__title">Люси</h3>
@@ -211,7 +212,7 @@
 
             <article class="new-films-item col-lg-3 col-sm-4 col-xs-6">
               <div class="new-films-item__thumbnail thumbnail">
-                <a href="">
+                <a href="#">
                   <img class="new-films-item__image" src="assets/img/films/1401663.jpg" alt="image">
                   <div class="new-films-item__caption caption">
                     <h3 class="new-films-item__title">Марсианин</h3>
@@ -222,7 +223,7 @@
 
             <article class="new-films-item col-lg-3 col-sm-4 col-xs-6">
               <div class="new-films-item__thumbnail thumbnail">
-                <a href="">
+                <a href="#">
                   <img class="new-films-item__image" src="assets/img/films/1415999.jpg" alt="image">
                   <div class="new-films-item__caption caption">
                     <h3 class="new-films-item__title">Дочь Бога</h3>
@@ -233,7 +234,7 @@
 
             <article class="new-films-item col-lg-3 col-sm-4 col-xs-6">
               <div class="new-films-item__thumbnail thumbnail">
-                <a href="">
+                <a href="#">
                   <img class="new-films-item__image" src="assets/img/films/1423264.jpg" alt="image">
                   <div class="new-films-item__caption caption">
                     <h3 class="new-films-item__title">Месть от кутюр</h3>
@@ -244,7 +245,7 @@
 
             <article class="new-films-item col-lg-3 col-sm-4 col-xs-6">
               <div class="new-films-item__thumbnail thumbnail">
-                <a href="">
+                <a href="#">
                   <img class="new-films-item__image" src="assets/img/films/1441076.jpg" alt="image">
                   <div class="new-films-item__caption caption">
                     <h3 class="new-films-item__title">5ять</h3>
@@ -255,7 +256,7 @@
 
             <article class="new-films-item col-lg-3 col-sm-4 col-xs-6">
               <div class="new-films-item__thumbnail thumbnail">
-                <a href="">
+                <a href="#">
                   <img class="new-films-item__image" src="assets/img/films/1453229.jpg" alt="image">
                   <div class="new-films-item__caption caption">
                     <h3 class="new-films-item__title">Люди Икс</h3>
@@ -266,7 +267,7 @@
 
             <article class="new-films-item col-lg-3 col-sm-4 col-xs-6">
               <div class="new-films-item__thumbnail thumbnail">
-                <a href="">
+                <a href="#">
                   <img class="new-films-item__image" src="assets/img/films/1455536.jpg" alt="image">
                   <div class="new-films-item__caption caption">
                     <h3 class="new-films-item__title">Иллюзия обмана 2</h3>
@@ -278,7 +279,146 @@
           </div>
         </section>
 
-        <section></section>
+        <!-- Top Week Films Section-->
+        <section class="top-week-films">
+          <h2>ТОП за неделю</h2>
+          <div class="top-week-films-row row">
+
+            <article class="top-week-films-item col-lg-3 col-sm-4 col-xs-6">
+              <div class="top-week-films-item__thumbnail thumbnail">
+                <a href="#">
+                  <img class="top-week-films-item__image" src="assets/img/films/1401663.jpg" alt="image">
+                  <div class="top-week-films-item__caption caption">
+                    <h3 class="top-week-films-item__title">Марсианин</h3>
+                  </div>
+                </a>
+              </div>
+            </article>
+
+            <article class="top-week-films-item col-lg-3 col-sm-4 col-xs-6">
+              <div class="top-week-films-item__thumbnail thumbnail">
+                <a href="#">
+                  <img class="top-week-films-item__image" src="assets/img/films/1453229.jpg" alt="image">
+                  <div class="top-week-films-item__caption caption">
+                    <h3 class="top-week-films-item__title">Люди Икс</h3>
+                  </div>
+                </a>
+              </div>
+            </article>
+
+            <article class="top-week-films-item col-lg-3 col-sm-4 col-xs-6">
+              <div class="top-week-films-item__thumbnail thumbnail">
+                <a href="#">
+                  <img class="top-week-films-item__image" src="assets/img/films/1263242.jpg" alt="image">
+                  <div class="top-week-films-item__caption caption">
+                    <h3 class="top-week-films-item__title">Люси</h3>
+                  </div>
+                </a>
+              </div>
+            </article>
+
+            <article class="top-week-films-item col-lg-3 col-sm-4 col-xs-6">
+              <div class="top-week-films-item__thumbnail thumbnail">
+                <a href="#">
+                  <img class="top-week-films-item__image" src="assets/img/films/1266931.jpg" alt="image">
+                  <div class="top-week-films-item__caption caption">
+                    <h3 class="top-week-films-item__title">Стражи галактики</h3>
+                  </div>
+                </a>
+              </div>
+            </article>
+
+            <article class="top-week-films-item col-lg-3 col-sm-4 col-xs-6">
+              <div class="top-week-films-item__thumbnail thumbnail">
+                <a href="#">
+                  <img class="top-week-films-item__image" src="assets/img/films/1289488.jpg" alt="image">
+                  <div class="top-week-films-item__caption caption">
+                    <h3 class="top-week-films-item__title">Занесло</h3>
+                  </div>
+                </a>
+              </div>
+            </article>
+
+            <article class="top-week-films-item col-lg-3 col-sm-4 col-xs-6">
+              <div class="top-week-films-item__thumbnail thumbnail">
+                <a href="#">
+                  <img class="top-week-films-item__image" src="assets/img/films/1341151.jpg" alt="image">
+                  <div class="top-week-films-item__caption caption">
+                    <h3 class="top-week-films-item__title">Из машины</h3>
+                  </div>
+                </a>
+              </div>
+            </article>
+
+            <article class="top-week-films-item col-lg-3 col-sm-4 col-xs-6">
+              <div class="top-week-films-item__thumbnail thumbnail">
+                <a href="#">
+                  <img class="top-week-films-item__image" src="assets/img/films/1381061.jpg" alt="image">
+                  <div class="top-week-films-item__caption caption">
+                    <h3 class="top-week-films-item__title">Выхода нет</h3>
+                  </div>
+                </a>
+              </div>
+            </article>
+
+            <article class="top-week-films-item col-lg-3 col-sm-4 col-xs-6">
+              <div class="top-week-films-item__thumbnail thumbnail">
+                <a href="#">
+                  <img class="top-week-films-item__image" src="assets/img/films/1393263.jpg" alt="image">
+                  <div class="top-week-films-item__caption caption">
+                    <h3 class="top-week-films-item__title">Человек муравей</h3>
+                  </div>
+                </a>
+              </div>
+            </article>
+
+            <article class="top-week-films-item col-lg-3 col-sm-4 col-xs-6">
+              <div class="top-week-films-item__thumbnail thumbnail">
+                <a href="#">
+                  <img class="top-week-films-item__image" src="assets/img/films/1415999.jpg" alt="image">
+                  <div class="top-week-films-item__caption caption">
+                    <h3 class="top-week-films-item__title">Дочь Бога</h3>
+                  </div>
+                </a>
+              </div>
+            </article>
+
+            <article class="top-week-films-item col-lg-3 col-sm-4 col-xs-6">
+              <div class="top-week-films-item__thumbnail thumbnail">
+                <a href="#">
+                  <img class="top-week-films-item__image" src="assets/img/films/1423264.jpg" alt="image">
+                  <div class="top-week-films-item__caption caption">
+                    <h3 class="top-week-films-item__title">Месть от кутюр</h3>
+                  </div>
+                </a>
+              </div>
+            </article>
+
+            <article class="top-week-films-item col-lg-3 col-sm-4 col-xs-6">
+              <div class="top-week-films-item__thumbnail thumbnail">
+                <a href="#">
+                  <img class="top-week-films-item__image" src="assets/img/films/1441076.jpg" alt="image">
+                  <div class="top-week-films-item__caption caption">
+                    <h3 class="top-week-films-item__title">5ять</h3>
+                  </div>
+                </a>
+              </div>
+            </article>
+
+            <article class="top-week-films-item col-lg-3 col-sm-4 col-xs-6">
+              <div class="top-week-films-item__thumbnail thumbnail">
+                <a href="#">
+                  <img class="top-week-films-item__image" src="assets/img/films/1455536.jpg" alt="image">
+                  <div class="top-week-films-item__caption caption">
+                    <h3 class="top-week-films-item__title">Иллюзия обмана 2</h3>
+                  </div>
+                </a>
+              </div>
+            </article>
+
+          </div>
+        </section>
+
       </main>
 
       <aside class="left-sidebar col-lg-3 col-lg-pull-9 col-md-4 col-md-pull-8">
