Finished the first page

--- a/index.html
+++ b/index.html
@@ -419,7 +419,7 @@
           </div>
         </section>
 
-        <!-- News Section -->
+        <!-- Film News Section -->
         <section class="news-in-films">
           <h2>Новости кино</h2>
 
@@ -699,7 +699,103 @@
     </div>
   </div>
 
-  <footer class="footer"></footer>
+  <footer class="footer">
+    <div class="container-fluid">
+      <div class="row">
+        <div class="container">
+          <div class="row">
+            <div class="footer-list">
+
+              <div class="footer-list-item col-md-3 col-xs-6">
+                <h4>Lorem ipsum dolor sit.</h4>
+                <ul>
+                  <li>
+                    <a href="#">Lorem ipsum dolor.</a>
+                  </li>
+                  <li>
+                    <a href="#">Delectus, labore, incidunt.</a>
+                  </li>
+                  <li>
+                    <a href="#">Eos neque, eius.</a>
+                  </li>
+                  <li>
+                    <a href="#">Minus, omnis vel.</a>
+                  </li>
+                </ul>
+              </div>
+
+              <div class="footer-list-item col-md-3 col-xs-6">
+                <h4>Voluptatem, commodi, at.</h4>
+                <ul>
+                  <li>
+                    <a href="#">Lorem ipsum dolor.</a>
+                  </li>
+                  <li>
+                    <a href="#">Delectus, labore, incidunt.</a>
+                  </li>
+                  <li>
+                    <a href="#">Eos neque, eius.</a>
+                  </li>
+                  <li>
+                    <a href="#">Minus, omnis vel.</a>
+                  </li>
+                  <li>
+                    <a href="#">Aspernatur, fugiat, possimus!</a>
+                  </li>
+                </ul>
+              </div>
+
+              <div class="footer-list-item col-md-3 col-xs-6">
+                <h4>Sed, ducimus perspiciatis.</h4>
+                <ul>
+                  <li>
+                    <a href="#">Lorem ipsum dolor.</a>
+                  </li>
+                  <li>
+                    <a href="#">Delectus, labore, incidunt.</a>
+                  </li>
+                  <li>
+                    <a href="#">Eos neque, eius.</a>
+                  </li>
+                  <li>
+                    <a href="#">Minus, omnis vel.</a>
+                  </li>
+                </ul>
+              </div>
+
+              <div class="footer-list-item col-md-3 col-xs-6">
+                <h4>Reiciendis, minima, a?</h4>
+                <ul>
+                  <li>
+                    <a href="#">Lorem ipsum dolor.</a>
+                  </li>
+                  <li>
+                    <a href="#">Delectus, labore, incidunt.</a>
+                  </li>
+                  <li>
+                    <a href="#">Eos neque, eius.</a>
+                  </li>
+                  <li>
+                    <a href="#">Minus, omnis vel.</a>
+                  </li>
+                  <li>
+                    <a href="#">Aspernatur, fugiat, possimus!</a>
+                  </li>
+                </ul>
+              </div>
+
+            </div>
+          </div>
+
+          <div class="row">
+            <div class="footer-author col-lg-12">
+              <a href="#">Учебный шаблон Bootstrap v3.4.1. Разработка - Андрей Фоменко</a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </footer>
 
   <script src="libs/jquery/dist/jquery.min.js"></script>
   <script src="libs/bootstrap/dist/js/bootstrap.min.js"></script>
