working on form

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <div class="collapse navbar-collapse" id="navbar-top">
           <ul class="nav navbar-nav navbar-left">
             <li class="active"><a href="#">Главная <span class="sr-only">(current)</span></a></li>
-            <li><a href="#">Фильмы</a></li>
+            <li><a href="page.html">Фильмы</a></li>
             <li><a href="#">Сериалы</a></li>
             <li><a href="#">Контакты</a></li>
           </ul>
@@ -60,8 +60,6 @@
     </nav>
 
   </header>
-
-
 
   <div class="container">
     <div class="row">
@@ -146,7 +144,7 @@
 
             <article class="new-films-item col-lg-3 col-sm-4 col-xs-6">
               <div class="new-films-item__thumbnail thumbnail">
-                <a href="#">
+                <a href="page.html">
                   <img class="new-films-item__image" src="assets/img/films/1266931.jpg" alt="image">
                   <div class="new-films-item__caption caption">
                     <h3 class="new-films-item__title">Стражи галактики</h3>
@@ -157,7 +155,7 @@
 
             <article class="new-films-item col-lg-3 col-sm-4 col-xs-6">
               <div class="new-films-item__thumbnail thumbnail">
-                <a href="#">
+                <a href="page.html">
                   <img class="new-films-item__image" src="assets/img/films/1289488.jpg" alt="image">
                   <div class="new-films-item__caption caption">
                     <h3 class="new-films-item__title">Занесло</h3>
@@ -168,7 +166,7 @@
 
             <article class="new-films-item col-lg-3 col-sm-4 col-xs-6">
               <div class="new-films-item__thumbnail thumbnail">
-                <a href="#">
+                <a href="page.html">
                   <img class="new-films-item__image" src="assets/img/films/1341151.jpg" alt="image">
                   <div class="new-films-item__caption caption">
                     <h3 class="new-films-item__title">Из машины</h3>
@@ -179,7 +177,7 @@
 
             <article class="new-films-item col-lg-3 col-sm-4 col-xs-6">
               <div class="new-films-item__thumbnail thumbnail">
-                <a href="#">
+                <a href="page.html">
                   <img class="new-films-item__image" src="assets/img/films/1381061.jpg" alt="image">
                   <div class="new-films-item__caption caption">
                     <h3 class="new-films-item__title">Выхода нет</h3>
@@ -190,7 +188,7 @@
 
             <article class="new-films-item col-lg-3 col-sm-4 col-xs-6">
               <div class="new-films-item__thumbnail thumbnail">
-                <a href="#">
+                <a href="page.html">
                   <img class="new-films-item__image" src="assets/img/films/1393263.jpg" alt="image">
                   <div class="new-films-item__caption caption">
                     <h3 class="new-films-item__title">Человек муравей</h3>
@@ -201,7 +199,7 @@
 
             <article class="new-films-item col-lg-3 col-sm-4 col-xs-6">
               <div class="new-films-item__thumbnail thumbnail">
-                <a href="#">
+                <a href="page.html">
                   <img class="new-films-item__image" src="assets/img/films/1263242.jpg" alt="image">
                   <div class="new-films-item__caption caption">
                     <h3 class="new-films-item__title">Люси</h3>
@@ -212,7 +210,7 @@
 
             <article class="new-films-item col-lg-3 col-sm-4 col-xs-6">
               <div class="new-films-item__thumbnail thumbnail">
-                <a href="#">
+                <a href="page.html">
                   <img class="new-films-item__image" src="assets/img/films/1401663.jpg" alt="image">
                   <div class="new-films-item__caption caption">
                     <h3 class="new-films-item__title">Марсианин</h3>
@@ -223,7 +221,7 @@
 
             <article class="new-films-item col-lg-3 col-sm-4 col-xs-6">
               <div class="new-films-item__thumbnail thumbnail">
-                <a href="#">
+                <a href="page.html">
                   <img class="new-films-item__image" src="assets/img/films/1415999.jpg" alt="image">
                   <div class="new-films-item__caption caption">
                     <h3 class="new-films-item__title">Дочь Бога</h3>
@@ -234,7 +232,7 @@
 
             <article class="new-films-item col-lg-3 col-sm-4 col-xs-6">
               <div class="new-films-item__thumbnail thumbnail">
-                <a href="#">
+                <a href="page.html">
                   <img class="new-films-item__image" src="assets/img/films/1423264.jpg" alt="image">
                   <div class="new-films-item__caption caption">
                     <h3 class="new-films-item__title">Месть от кутюр</h3>
@@ -245,7 +243,7 @@
 
             <article class="new-films-item col-lg-3 col-sm-4 col-xs-6">
               <div class="new-films-item__thumbnail thumbnail">
-                <a href="#">
+                <a href="page.html">
                   <img class="new-films-item__image" src="assets/img/films/1441076.jpg" alt="image">
                   <div class="new-films-item__caption caption">
                     <h3 class="new-films-item__title">5ять</h3>
@@ -256,7 +254,7 @@
 
             <article class="new-films-item col-lg-3 col-sm-4 col-xs-6">
               <div class="new-films-item__thumbnail thumbnail">
-                <a href="#">
+                <a href="page.html">
                   <img class="new-films-item__image" src="assets/img/films/1453229.jpg" alt="image">
                   <div class="new-films-item__caption caption">
                     <h3 class="new-films-item__title">Люди Икс</h3>
@@ -267,7 +265,7 @@
 
             <article class="new-films-item col-lg-3 col-sm-4 col-xs-6">
               <div class="new-films-item__thumbnail thumbnail">
-                <a href="#">
+                <a href="page.html">
                   <img class="new-films-item__image" src="assets/img/films/1455536.jpg" alt="image">
                   <div class="new-films-item__caption caption">
                     <h3 class="new-films-item__title">Иллюзия обмана 2</h3>
@@ -286,7 +284,7 @@
 
             <article class="top-week-films-item col-lg-3 col-sm-4 col-xs-6">
               <div class="top-week-films-item__thumbnail thumbnail">
-                <a href="#">
+                <a href="page.html">
                   <img class="top-week-films-item__image" src="assets/img/films/1401663.jpg" alt="image">
                   <div class="top-week-films-item__caption caption">
                     <h3 class="top-week-films-item__title">Марсианин</h3>
@@ -297,7 +295,7 @@
 
             <article class="top-week-films-item col-lg-3 col-sm-4 col-xs-6">
               <div class="top-week-films-item__thumbnail thumbnail">
-                <a href="#">
+                <a href="page.html">
                   <img class="top-week-films-item__image" src="assets/img/films/1453229.jpg" alt="image">
                   <div class="top-week-films-item__caption caption">
                     <h3 class="top-week-films-item__title">Люди Икс</h3>
@@ -308,7 +306,7 @@
 
             <article class="top-week-films-item col-lg-3 col-sm-4 col-xs-6">
               <div class="top-week-films-item__thumbnail thumbnail">
-                <a href="#">
+                <a href="page.html">
                   <img class="top-week-films-item__image" src="assets/img/films/1263242.jpg" alt="image">
                   <div class="top-week-films-item__caption caption">
                     <h3 class="top-week-films-item__title">Люси</h3>
@@ -319,7 +317,7 @@
 
             <article class="top-week-films-item col-lg-3 col-sm-4 col-xs-6">
               <div class="top-week-films-item__thumbnail thumbnail">
-                <a href="#">
+                <a href="page.html">
                   <img class="top-week-films-item__image" src="assets/img/films/1266931.jpg" alt="image">
                   <div class="top-week-films-item__caption caption">
                     <h3 class="top-week-films-item__title">Стражи галактики</h3>
@@ -330,7 +328,7 @@
 
             <article class="top-week-films-item col-lg-3 col-sm-4 col-xs-6">
               <div class="top-week-films-item__thumbnail thumbnail">
-                <a href="#">
+                <a href="page.html">
                   <img class="top-week-films-item__image" src="assets/img/films/1289488.jpg" alt="image">
                   <div class="top-week-films-item__caption caption">
                     <h3 class="top-week-films-item__title">Занесло</h3>
@@ -341,7 +339,7 @@
 
             <article class="top-week-films-item col-lg-3 col-sm-4 col-xs-6">
               <div class="top-week-films-item__thumbnail thumbnail">
-                <a href="#">
+                <a href="page.html">
                   <img class="top-week-films-item__image" src="assets/img/films/1341151.jpg" alt="image">
                   <div class="top-week-films-item__caption caption">
                     <h3 class="top-week-films-item__title">Из машины</h3>
@@ -352,7 +350,7 @@
 
             <article class="top-week-films-item col-lg-3 col-sm-4 col-xs-6">
               <div class="top-week-films-item__thumbnail thumbnail">
-                <a href="#">
+                <a href="page.html">
                   <img class="top-week-films-item__image" src="assets/img/films/1381061.jpg" alt="image">
                   <div class="top-week-films-item__caption caption">
                     <h3 class="top-week-films-item__title">Выхода нет</h3>
@@ -363,7 +361,7 @@
 
             <article class="top-week-films-item col-lg-3 col-sm-4 col-xs-6">
               <div class="top-week-films-item__thumbnail thumbnail">
-                <a href="#">
+                <a href="page.html">
                   <img class="top-week-films-item__image" src="assets/img/films/1393263.jpg" alt="image">
                   <div class="top-week-films-item__caption caption">
                     <h3 class="top-week-films-item__title">Человек муравей</h3>
@@ -374,7 +372,7 @@
 
             <article class="top-week-films-item col-lg-3 col-sm-4 col-xs-6">
               <div class="top-week-films-item__thumbnail thumbnail">
-                <a href="#">
+                <a href="page.html">
                   <img class="top-week-films-item__image" src="assets/img/films/1415999.jpg" alt="image">
                   <div class="top-week-films-item__caption caption">
                     <h3 class="top-week-films-item__title">Дочь Бога</h3>
@@ -385,7 +383,7 @@
 
             <article class="top-week-films-item col-lg-3 col-sm-4 col-xs-6">
               <div class="top-week-films-item__thumbnail thumbnail">
-                <a href="#">
+                <a href="page.html">
                   <img class="top-week-films-item__image" src="assets/img/films/1423264.jpg" alt="image">
                   <div class="top-week-films-item__caption caption">
                     <h3 class="top-week-films-item__title">Месть от кутюр</h3>
@@ -396,7 +394,7 @@
 
             <article class="top-week-films-item col-lg-3 col-sm-4 col-xs-6">
               <div class="top-week-films-item__thumbnail thumbnail">
-                <a href="#">
+                <a href="page.html">
                   <img class="top-week-films-item__image" src="assets/img/films/1441076.jpg" alt="image">
                   <div class="top-week-films-item__caption caption">
                     <h3 class="top-week-films-item__title">5ять</h3>
@@ -407,7 +405,7 @@
 
             <article class="top-week-films-item col-lg-3 col-sm-4 col-xs-6">
               <div class="top-week-films-item__thumbnail thumbnail">
-                <a href="#">
+                <a href="page.html">
                   <img class="top-week-films-item__image" src="assets/img/films/1455536.jpg" alt="image">
                   <div class="top-week-films-item__caption caption">
                     <h3 class="top-week-films-item__title">Иллюзия обмана 2</h3>
