Finished 2 pages with Pixel Perfect and Validation checked

--- a/index.html
+++ b/index.html
@@ -426,12 +426,12 @@
               <a href="#">Кейт Бекинсейл представила фильм "Другой мир: Войны крови"</a>
             </h3>
             <div class="row">
-              <div class="col-lg-4">
+              <div class="col-sm-4">
                 <div class="news-in-films-item__thumbnail thumbnail">
                   <img class="news-in-films-item__image" src="assets/img/news/news-1.jpg" alt="image">
                 </div>
               </div>
-              <div class="col-lg-8">
+              <div class="col-sm-8">
                 <p class="news-in-films-item__text">Кейт Бекинсейл представила в Мексике свой новый фильм "Другой мир:
                   Войны крови". На красной дорожке актриса позировала фотографам в роскошном красном платье. В фильме
                   речь пойдет о Селене - Воительница-вампир Селена вступает в свой последний и решающий бой между
@@ -447,12 +447,12 @@
               <a href="#">Критики Нью-Йорка выбрали лучший фильм 2016 года</a>
             </h3>
             <div class="row">
-              <div class="col-lg-4">
+              <div class="col-sm-4">
                 <div class="news-in-films-item__thumbnail thumbnail">
                   <img class="news-in-films-item__image" src="assets/img/news/news-2.jpg" alt="image">
                 </div>
               </div>
-              <div class="col-lg-8">
+              <div class="col-sm-8">
                 <p class="news-in-films-item__text">Им стал мюзикл "Ла-Ла Ленд", который снял режиссер Дэмьен Шазелл.
                   Лучшим актером года был признан Кейси Аффлек, сыгравший в картине "Манчестер у моря", а в аналогичной
                   женской категории победа была присуждена Изабель Юппер снимавшаяся в фильме "Она". Лучшей актрисой
@@ -468,12 +468,12 @@
               <a href="#">Крис Прэтт и Дженнифер Лоуренс представили "Пассажиров" в Париже</a>
             </h3>
             <div class="row">
-              <div class="col-lg-4">
+              <div class="col-sm-4">
                 <div class="news-in-films-item__thumbnail thumbnail">
                   <img class="news-in-films-item__image" src="assets/img/news/news-3.jpg" alt="image">
                 </div>
               </div>
-              <div class="col-lg-8">
+              <div class="col-sm-8">
                 <p class="news-in-films-item__text">Хотя до премьеры "Пассажиров" остается еще почти месяц, промо-тур в
                   поддержку нового фильма уже начался: Крис Прэтт и Дженнифер Лоуренс, исполнившие в фильме главные
                   роли, представили "Пассажиров" в рамках фотоколла в Париже. В кинотеатрах "Пассажиры" появятся под
